building out templates, added placeholders for future functions

--- a/Snoop/templates/error.html
+++ b/Snoop/templates/error.html
@@ -3,8 +3,8 @@
         <title>Snoop OpenVPN Controller for Raspberry Pi</title>
     </head>
     <body>
-        <h1>Snoop Central</h1>
-        <h2>VPN Status: {{status}}</h2><br /><br />
+        <h1>Error</h1>
+        <h2>The following is not valid entry: {{value}}</h2><br /><br />
         <h2>Options</h2>
         do something<br />
         do something else<br />
