fixed variable names

--- a/Snoop/templates/home.html
+++ b/Snoop/templates/home.html
@@ -4,7 +4,8 @@
     </head>
     <body>
         <h1>Snoop Central</h1>
-        <h2>VPN Status: {{status}}</h2><br /><br />
+        <h2>Selected VPN: {{current_vpn}}<br />
+        <h2>VPN Status: {{vpn_status}}</h2><br /><br />
         <h2>Options</h2>
         <b>Select New VPN Server</b>
         <form>
