--- a/Snoop/templates/home.html
+++ b/Snoop/templates/home.html
@@ -19,6 +19,6 @@
         </form>
         do something else<br />
         select city<br />
-        <i>{{datetime}}</i><br />
+        <i>{{date_time}}</i><br />
     </body>
 </html>
