--- a/Snoop/templates/home.html
+++ b/Snoop/templates/home.html
@@ -8,7 +8,7 @@
         <h2>VPN Status: {{vpn_status}}</h2><br /><br />
         <h2>Options</h2>
         <b>Select New VPN Server</b>
-        <form>
+        <form action="/" method="POST">
         Select VPN Server:
             <select name="user_select_vpn">
             {% for vpn in available_vpn %}
@@ -17,8 +17,11 @@
             </select>
             <input type="submit" value="Connect!">
         </form>
-        do something else<br />
-        select city<br />
+        <h2>STOP/START</h2><br />
+        <form action="/" method="POST">
+            <input type="submit" value={{action}}>
+            {{'<input type="submit" value="Restart">' if action=="Stop"}}
+        </form>
         <i>{{date_time}}</i><br />
     </body>
 </html>
