--- a/Snoop/templates/home.html
+++ b/Snoop/templates/home.html
@@ -11,7 +11,7 @@
 <div class="container">
 
         <h1>Snoop Central</h1>
-        <h2>Selected VPN: {{current_vpn}}<br />
+        <h2>Current VPN: {{current_vpn}}<br />
         <h2>VPN Status: {{vpn_status}}</h2><br /><br />
         <h2>Options</h2>
         <b>Select New VPN Server</b>
@@ -33,7 +33,7 @@
         <form action="/" method="POST">
             <div class="input submit">
                 <input type="submit" name="submit" value={{action}}>
-                {{<input type="submit" name="submit" value="Restart"> if action=="Stop"}}
+                {{'<input type="submit" name="submit" value="Restart">' if action=="Stop"}}
             </div>
         </form>
         <i>{{date_time}}</i><br />
