--- a/Snoop/templates/home.html
+++ b/Snoop/templates/home.html
@@ -20,7 +20,7 @@
             <div class="form-group">
                 <select name="user_select_vpn">
                 {% for vpn in available_vpn %}
-                    <option value="{{vpn}}" {{'selected="selected"' if vpn==current_vpn}}>{{vpn}}</option>
+                    <option value={{vpn}} {{'selected="selected"' if vpn==current_vpn}}>{{vpn}}</option>
                 {% endfor %}<br />
                 </select>
                 <div class="input submit">
@@ -34,7 +34,7 @@
             <div class="input submit">
                 <input type="submit" name="submit" value={{action}}>
                 {% block content %}
-                    {{% if action=="Stop" %}}
+                    {% if action=="Stop" %}
                         <input type="submit" name="submit" value="Restart">
                     {% endif %}
                 {% endblock content %}
